# rosbot_ros-release

./: .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.rst  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  MANIPULATOR.md  README.md  ROS_API.md  debian.store  justfile  package.xml  patches.conf  releaser_history.json  rosbot_hardware.repos  rosbot_simulation.repos  rpm.store  tracks.yaml
.github/workflows/: build-docker.yaml  bump.yaml  ci.yaml  firmware-bump-automerge.yaml  integration.yaml  run-tests.yaml  tests.yaml
config/: config.yaml  joint_limits.yaml  kinematics.yaml  ompl_planning.yaml  tf_namespace_bridge.yaml
config/rosbot/: basic.yaml  controllers.yaml
config/rosbot_xl/: autonomy.yaml  controllers.yaml  custom.yaml  manipulation.yaml  manipulation_pro.yaml
debian/: changelog  control  copyright  gbp.conf  rules
docker/: Dockerfile.hardware  Dockerfile.simulation  compose.rosbot.yaml  compose.rosbot_xl.yaml  compose.simulation.yaml
include/rosbot_hardware_interfaces/: rosbot_system.hpp
include/rosbot_moveit/: arm_pose_mover.hpp  joy2servo.hpp
launch/: controller.yaml  home.launch.py  manipulator.yaml  mavlink.launch.py  microros.launch.py  move_group.launch.py  rosbot.yaml  rosbot_xl.yaml  rviz.launch.py  servo.launch.py
meshes/rosbot/: body.glb
rosbot/: CHANGELOG.rst  manipulator.repos  package.xml  rosbot_simulation.repos
rosbot_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
rosbot_bringup/launch/: microros.launch.py
rosbot_controller/: CMakeLists.txt  package.xml
rosbot_controller/config/rosbot/: controllers.yaml
rosbot_controller/config/rosbot_xl/: controllers.yaml
rosbot_controller/test/: test_xacro.py
rosbot_description/: CHANGELOG.rst  package.xml
rosbot_description/config/rosbot_xl/: telepresence.yaml
rosbot_description/urdf/common/: gazebo.urdf.xacro
rosbot_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rosbot_gazebo/launch/: simulation.yaml  spawn_robot.yaml
rosbot_hardware_interfaces/: CMakeLists.txt  package.xml
rosbot_hardware_interfaces/test/: test_plugins.cpp
rosbot_joy/: CMakeLists.txt
rosbot_localization/: CHANGELOG.rst  package.xml
rosbot_moveit/: CHANGELOG.rst  CMakeLists.txt
rosbot_moveit/config/: moveit_controllers.yaml  moveit_servo.yaml
rosbot_moveit/launch/: dock.launch.py
rosbot_moveit/src/: arm_pose_mover.cpp
rosbot_moveit/test/: conftest.py  test_moveit_extra.py
rosbot_utils/: firmware_version.py  mcu_manager_ftdi.py  mcu_manager_uart.py  setup.py
rosbot_utils/config/rosbot_xl/: config.yaml
rosbot_utils/rosbot_utils/: flash_firmware.py  flash_firmware_usb.py
rosbot_utils/src/: led_strip_car_wave.cpp
rpm/: ros-jazzy-rosbot-bringup.spec  ros-jazzy-rosbot-controller.spec  ros-jazzy-rosbot-description.spec  ros-jazzy-rosbot-gazebo.spec  ros-jazzy-rosbot-hardware-interfaces.spec  ros-jazzy-rosbot-joy.spec  ros-jazzy-rosbot-localization.spec  ros-jazzy-rosbot-utils.spec  ros-jazzy-rosbot.spec  template.spec
scripts/: configure_robot  create_config_dir  flash_firmware
src/: dock.cpp  home.cpp  joy2servo.cpp  led_strip_rainbow.cpp  rosbot_system.cpp
test/: bringup_helpers.py  test_bringup.py  test_config.py  test_configs.py  test_controllers_yaml.py  test_ekf_config.py  test_firmware_version.py  test_launch.py  test_launch_offline.py  test_led_strip.py  test_moveit_config.py  test_namespace_isolation.py  test_xacro.py
urdf/: rosbot_xl.urdf.xacro
urdf/common/: ros2_control.urdf.xacro
urdf/rosbot/: body.urdf.xacro
