<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rosbot_bringup</name>
  <version>0.18.6</version>
  <description>ROSbot Series bringup package</description>
  <maintainer email="support@husarion.com">Husarion</maintainer>
  <license>Apache License 2.0</license>

  <url type="website">https://husarion.com/</url>
  <url type="repository">https://github.com/husarion/rosbot_ros</url>
  <url type="bugtracker">https://github.com/husarion/rosbot_ros/issues</url>

  <author email="jakub.delicat@husarion.com">Jakub Delicat</author>
  <author email="rafal.gorecki@husarion.com">Rafal Gorecki</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">launch</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">launch_ros</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">micro_ros_agent</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">rosbot_controller</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">rosbot_joy</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">rosbot_localization</exec_depend>
  <exec_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">rosbot_utils</exec_depend>

  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">ament_cmake_pytest</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">launch</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">launch</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">launch_pytest</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">launch_pytest</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">launch_ros</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">nav_msgs</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">nav_msgs</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">python3-pytest</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">python3-pytest</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">rclpy</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">rosbot_localization</test_depend>
  <test_depend condition="$HUSARION_ROS_BUILD_TYPE == hardware">sensor_msgs</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
